--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/main.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/main.scss
@@ -36,5 +36,13 @@
 .biggest-part {
 	.container {
 		display: flex;
+		padding: 0 105px;
+		justify-content: space-between;
 	}
+}
+
+.selections {
+	// margin-left: 125px;
+	margin-top: 0;
+	width: 730px;
 }
