--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
@@ -28,6 +28,33 @@
 
                 // margin-left: 23px;
 
+                .configuration__controller {
+                    padding: 32px 28px;
+
+                    h4 {
+                        margin: 0;
+                        font-family: 'Fraunces', serif;
+                        font-style: normal;
+                        font-weight: 900;
+                        font-size: 24px;
+                        line-height: 32px;
+                        color: #333D4B;
+                        margin-bottom: 24px;
+                    }
+
+                    p {
+                        font-family: Barlow;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 16px;
+                        line-height: 26px;
+                        /* or 162% */
+                        
+                        
+                        color: #333D4B;
+                    }
+                }
+
                 .block__choice + .configuration__controller {
                     transition: background 0.5s ease;
                 }
@@ -38,8 +65,15 @@
                 }
 
                 .block__choice:checked + .configuration__controller {
+                    // color: white;
                     background-color: #0E8784;
                     transition: background 0.5s ease;
+                    // transition: color 0.5s ease;
+
+                    h4, p {
+                        color: white;
+                        transition: color 0.5s ease;
+                    }
                 }
 
                 .configuration__controller {
