--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
@@ -57,6 +57,11 @@
 
                 .block__choice + .configuration__controller {
                     transition: background 0.5s ease;
+
+                    h4, p {
+                        color: black;
+                        transition: color 0.5s ease;
+                    }
                 }
 
                 .block__choice:hover + .configuration__controller {
