--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
@@ -59,7 +59,7 @@
                     transition: background 0.5s ease;
 
                     h4, p {
-                        color: black;
+                        color: #333D4B;
                         transition: color 0.5s ease;
                     }
                 }
