--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_selection__configuration.scss
@@ -29,7 +29,10 @@
                 // margin-left: 23px;
 
                 .configuration__controller {
-                    padding: 32px 28px;
+                    // padding: auto;
+                    padding: 32px;
+                    padding-right: 0;
+                    padding-left: 28px;
 
                     h4 {
                         margin: 0;
@@ -49,7 +52,7 @@
                         font-size: 16px;
                         line-height: 26px;
                         /* or 162% */
-                        
+                        padding-right: 28px;
                         
                         color: #333D4B;
                     }
@@ -101,7 +104,7 @@
     margin-bottom: 40px;
 
     .result__p {
-        font-family: Barlow;
+        font-family: 'Barlow';
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
