--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_footer.scss
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/scss/all-blocks/_footer.scss
@@ -1,6 +1,7 @@
 @import './nav';
 
 .footer__inner {
+    margin-bottom: 135px;
 	display: flex;
 	align-items: center;
 	padding: 47px 85px;
@@ -9,6 +10,8 @@
 }
 
 .footer {
+
+
     .logo-link {
         margin-right: 103px;
     }
